--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=recipe-manager
+spring.datasource.url=jdbc:mysql://localhost:3306/recipe-management
+spring.datasource.username=recipe-management
+spring.datasource.password=recipe-management
+spring.jpa.open-in-view=true
